--- a/homePage.css
+++ b/homePage.css
@@ -3,18 +3,34 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    line-height: 1.6;
+    font-size: 1.25rem;
+    color: var(--text-color);
+    font-family: sans-serif;
+}
 header{
     text-align: center;
 }
 h1{
     color: var(--h1-color);
+    line-height: 1.1;
 }
 h2{
     color:var(--h2-color);
 }
+h3{
+    font-size: 1.75rem;
+}
+section{
+    margin-block: 100px;
+}
 footer{
     background-color: var(--footer-background-color);
     color:var(--footer-text);
+    text-align: center;
+    padding: 50px;
+    border: 5px solid var(--footer-border-color);
 }
 :root{
 
@@ -22,4 +38,6 @@ footer{
     --h2-color:#CB721C;
     --footer-background-color:#22466C;
     --footer-text:#fff;
+    --text-color:#1B281B;
+    --footer-border-color:#6E84CF;
 }
